[package]
name = "never_jscore"
version = "2.5.1"
edition = "2021"
authors = ["never_jscore contributors"]
description = "High-performance Python JavaScript execution engine based on Deno Core (V8) with full Promise/async support"
license = "MIT"
repository = "https://github.com/neverl805/never-jscore"
keywords = ["javascript", "v8", "deno", "execjs", "python"]
categories = ["development-tools"]

[lib]
name = "never_jscore"
crate-type = ["cdylib", "rlib"]

[features]
default = ["deno_web_api", "node_compat"]
# 使用 Deno 官方 Web API
deno_web_api = [
    "deno_webidl",
    "dep:deno_web",
    "dep:deno_crypto",
    "dep:deno_fetch",
    "dep:deno_net",
    "dep:deno_tls",
    "dep:deno_webstorage",
    "dep:deno_permissions",
    "dep:deno_features",
    "dep:deno_error",
    "dep:sys_traits",
    "dep:rustls",
]
# Node.js 兼容层 (完整npm生态支持)
node_compat = [
    "dep:deno_node",
    "dep:deno_fs",
    "dep:deno_io",
    "dep:deno_os",
    "dep:deno_process",
    "dep:node_resolver",
    "dep:deno_package_json",
    "dep:deno_maybe_sync",
    "dep:deno_crypto_provider",
    "dep:deno_path_util",
    "dep:url",
    "dep:thiserror",
    "dep:boxed_error",
    "dep:deno_ast",
]

[dependencies]
deno_core = "0.371.0"

# Deno extensions from forked repo
# https://github.com/neverl805/deno
deno_webidl = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_web = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_crypto = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_fetch = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_net = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_tls = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_webstorage = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_permissions = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_features = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_error = { version = "0.7.0", optional = true }
sys_traits = { version = "0.1.17", features = ["libc", "real", "winapi"], optional = true }

# Node.js 兼容层依赖
deno_node = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_fs = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_io = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_os = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_process = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
node_resolver = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_package_json = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_maybe_sync = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }
deno_crypto_provider = { git = "https://github.com/neverl805/deno", branch = "main", optional = true }

# Python bindings
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py38"] }

# Core utilities
anyhow = "1.0.100"
tokio = { version = "1.48", features = ["rt", "time", "macros"] }
serde_json = "1.0"

# Thread-safe utilities
once_cell = "1.20"

# Random number generation
rand = "0.8"

# Rustls for HTTPS support (deno_tls dependency)
rustls = { version = "0.23", features = ["ring"], optional = true }

# Node.js 兼容层额外依赖
deno_path_util = { version = "0.6.4", optional = true }
url = { version = "2.5", optional = true }
thiserror = { version = "2.0", optional = true }
boxed_error = { version = "0.2", optional = true }
deno_ast = { version = "0.50.3", features = ["transpiling"], optional = true }

# Windows系统依赖 (node_compat需要)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Networking",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_Dns",
    "Win32_System_SystemInformation",
] }
